# agent-ruler

./: .gitignore  CHANGELOG.md  COMMENT_RULES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about-this-project.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
assets/: control-panel-shell.html  default-policy.yaml  ui.css  ui.js
bridge/: README.md  __init__.py  openclaw_channel_bridge.py
config/: app.json
demo/: 01-normal-workspace.sh  02-block-system-delete.sh  03-download-exec-guard.sh  04-export-approval.sh  05-smoke.sh  06-owasp-smoke.sh  07-elevation-smoke.sh  07-openclaw-channel-smoke.sh  README.md
docs/: architecture.md  bridge-architecture.md  commenting-and-helper-rules.md
docs-site/: package-lock.json  package.json
install/: install.sh
scripts/: sync-version.sh
src/: agent_ruler.rs  approvals.rs  claudecode_bridge.rs  config.rs  doctor.rs  embedded_bridge.rs  export_gate.rs  lib.rs  main.rs  model.rs  openclaw_bridge.rs  opencode_bridge.rs  receipts.rs  sessions.rs  staged_exports.rs  ui.rs  ui_logs.rs  utils.rs
tests/: approvals_expiry.rs  approvals_flow.rs  command_execution_elevation.rs  doctor_flow.rs  export_gate_flow.rs  install_script_flow.rs  integration_policy_flow.rs  linux_runtime_integration.rs  objective_policy_coverage.rs  owasp_scenarios.rs  receipts_flow.rs  runner_expansion_flow.rs  runner_missing_flow.rs  runner_passthrough_flow.rs  runner_structured_output_flow.rs  runner_web_flow.rs  smoke_runner_flow.rs  ui_api_flow.rs  version_consistency_flow.rs
(+132 files in other folders)
