[package]
name = "agent-ruler"
version = "0.1.9-2"
edition = "2021"
license = "MIT"
description = "Deterministic reference monitor + confinement runner for AI agents"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
globset = "0.4"
hex = "0.4"
include_dir = "0.7"
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2.6"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.18"
tower = { version = "0.5", features = ["util"] }
